--- a/app/globals.css
+++ b/app/globals.css
@@ -1,5 +1,5 @@
-@import "tailwindcss";
-@import "tw-animate-css";
+@import 'tailwindcss';
+@import 'tw-animate-css';
 
 @custom-variant dark (&:is(.dark *));
 
@@ -80,6 +80,7 @@ body {
   --sidebar-accent-foreground: oklch(0.21 0.006 285.885);
   --sidebar-border: oklch(0.92 0.004 286.32);
   --sidebar-ring: oklch(0.705 0.015 286.067);
+  --destructive-foreground: 210 40% 98%;
 }
 
 .dark {
@@ -114,6 +115,7 @@ body {
   --sidebar-accent-foreground: oklch(0.985 0 0);
   --sidebar-border: oklch(1 0 0 / 10%);
   --sidebar-ring: oklch(0.552 0.016 285.938);
+  --destructive-foreground: 210 40% 98%;
 }
 
 @layer base {
@@ -122,5 +124,8 @@ body {
   }
   body {
     @apply bg-background text-foreground;
+    --chart-red: 0 84.2% 60.2%;
+    --chart-yellow: 47.9 95.8% 53.1%;
+    --chart-green: 142.1 76.2% 36.3%;
   }
 }
